compiler/tests/en/errors/toplevel_pub_func_not_at_end.salam
// EXPECT: E088
pub func a: ret 1 end

func b: ret 2 end

func main: end
